stop button tweaks

--- a/image_development/Dockerfile_BLAST
+++ b/image_development/Dockerfile_BLAST
@@ -4,4 +4,4 @@ RUN apt-get install gawk -y
 RUN apt-get install python3 -y
 RUN apt-get install python3-pip -y
 RUN python3 -m pip install biopython
-RUN apt-get install ncbi-blast+ -y
+RUN apt-get install ncbi-blast+=2.12.0+ds-3build1 -y
